--- a/checkout/index.html
+++ b/checkout/index.html
@@ -9,7 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
     <!-- Note: Ensure you have your actual Client ID here -->
-    <script src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=EUR"></script>
+    <script
+        src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=EUR"></script>
 
     <link href="../css/checkout.css" rel="stylesheet">
     <script src="../js/managers/render/options.js"></script>
@@ -24,7 +25,8 @@
 
 <body class="font-mono antialiased min-h-safe grid-bg flex flex-col items-center pt-20 md:pt-24 pb-10 px-4 relative">
 
-    <nav class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-4 md:px-6 py-4 bg-black/60 backdrop-blur-md border-b border-hacker-blue/20">
+    <nav
+        class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-4 md:px-6 py-4 bg-black/60 backdrop-blur-md border-b border-hacker-blue/20">
         <div class="flex items-center gap-4">
             <a href="https://discord.gg/SbGUYquj8b" target="_blank"
                 class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
@@ -47,28 +49,30 @@
             </a>
         </div>
 
-        <div class="flex items-center">            
+        <div class="flex items-center">
             <button id="auth-btn"
                 class="px-4 md:px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
                 LOGIN
             </button>
         </div>
     </nav>
-    
+
     <div
         class="fixed inset-0 bg-gradient-to-t from-hacker-black via-transparent to-transparent pointer-events-none -z-10">
     </div>
 
     <header class="w-full max-w-6xl flex justify-center md:justify-end items-center mb-6 px-2">
-        <a href="/" class="text-xs md:text-sm text-gray-500 hover:text-hacker-blue flex items-center gap-2 transition-colors">
+        <a href="/"
+            class="text-xs md:text-sm text-gray-500 hover:text-hacker-blue flex items-center gap-2 transition-colors">
             <span>[ RETURN HOME ]</span>
         </a>
     </header>
 
     <main
-    class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 md:min-h-[500px]">
+        class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 md:min-h-[500px]">
 
-        <div class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-6 md:p-8 flex flex-col order-1">
+        <div
+            class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-6 md:p-8 flex flex-col order-1">
             <h2 class="text-gray-400 text-xs uppercase tracking-widest mb-6">Your Order</h2>
 
             <div class="flex items-start gap-4 mb-6">
@@ -97,7 +101,13 @@
             <h1 class="title-scanlines text-2xl md:text-3xl font-bold text-white mb-6 md:mb-8">CHECKOUT</h1>
 
             <div class="mb-8">
-                <div id="paypal-button-container" class="w-full"></div>
+                <div id="content-paypal" class="block animate-pulse-slow">
+                    <div class="bg-hacker-black border border-gray-700 p-6 rounded mb-6 text-center">
+                        <cr>
+                            <div id="paypal"></div>
+                            <!-- <p class="text-gray-400 text-sm mb-4">A popup should open for you to login and pay.</p> -->
+                    </div>
+                </div>
             </div>
         </div>
     </main>
