--- a/checkout/index.html
+++ b/checkout/index.html
@@ -99,18 +99,15 @@
     <div class="fixed inset-0 bg-gradient-to-t from-black via-transparent to-transparent pointer-events-none -z-10">
     </div>
 
-    <!-- Header -->
     <header class="w-full max-w-6xl flex justify-center md:justify-end items-center mb-6 px-2">
         <a href="/" class="text-xs md:text-sm text-gray-500 hover:text-hacker-blue transition-colors">
             [ RETURN HOME ]
         </a>
     </header>
 
-    <!-- Main Checkout -->
     <main
         class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 md:min-h-[500px]">
 
-        <!-- Login Overlay -->
         <div id="login-overlay"
             class="absolute inset-0 bg-black/80 backdrop-blur-sm flex items-center justify-center z-20 hidden">
             <div class="text-center">
@@ -123,7 +120,6 @@
             </div>
         </div>
 
-        <!-- Order Summary -->
         <div
             class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-6 md:p-8 flex flex-col order-1">
             <h2 class="text-gray-400 text-xs uppercase tracking-widest mb-6">Your Order</h2>
@@ -166,7 +162,8 @@
             <div class="space-y-6">
                 <div class="tab-content block" data-content="paypal">
                     <div class="bg-black/40 border border-gray-800 rounded p-6">
-                        <div id="paypal-button-container"></div>
+                        <!-- <div id="paypal-button-container"></div> -->
+                         <h1>because of technical issues with paypal, i cant support paypal as i am restricted.</h1>
                     </div>
                 </div>
 
@@ -174,7 +171,6 @@
                     <div class="bg-black/40 border border-gray-800 rounded p-6">
                         <div class="flex flex-col md:flex-row gap-6 items-start">
 
-                            <!-- LEFT SIDE: QR CODE -->
                             <div class="shrink-0 mx-auto md:mx-0">
                                 <div id="crypto-qr-wrapper" class="hidden flex flex-col items-center gap-2">
                                     <div class="bg-white p-2 rounded shadow-[0_0_20px_rgba(59,130,246,0.25)]">
@@ -188,28 +184,24 @@
                                 </div>
                             </div>
 
-                            <!-- RIGHT SIDE: DETAILS -->
                             <div class="flex-1 w-full space-y-4">
                                 <div>
                                     <label
                                         class="block text-xs uppercase tracking-widest text-hacker-blue mb-2 font-bold">
-                                        Wallet Address
+                                        My Crypto Wallet
                                     </label>
 
-                                    <!-- INPUT CONTAINER (Relative for button positioning) -->
                                     <div class="relative group">
                                         <input id="crypto-wallet-address" type="text" readonly
                                             class="w-full bg-black/60 border border-gray-700 text-gray-300 text-sm font-mono rounded px-4 py-3 pr-24 focus:outline-none focus:border-hacker-blue focus:ring-1 focus:ring-hacker-blue/50 transition-all"
                                             placeholder="Initializing..." />
 
-                                        <!-- COPY BUTTON (Inside input) -->
                                         <button id="copy-btn" onclick="copyWalletAddress()"
                                             class="absolute right-1 top-1 bottom-1 px-3 bg-gray-800 hover:bg-hacker-blue text-gray-300 hover:text-black text-[10px] font-bold rounded transition-colors uppercase tracking-wider border border-gray-700 hover:border-hacker-blue z-10 flex items-center justify-center">
                                             COPY
                                         </button>
                                     </div>
 
-                                    <!-- TIMER STATUS (Moved OUTSIDE input container) -->
                                     <div class="flex items-center gap-3 mt-4">
                                         <button id="crypto-ticket-btn"
                                             class="px-4 py-2 border border-hacker-blue text-hacker-blue text-[11px] font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 uppercase">
